<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#f6f5f1" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:drawableLeft="@drawable/back"
            android:drawableStart="@drawable/back"
            android:text="@string/login"
            android:textColor="#007dff"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/register"
            android:textSize="30sp"
            android:textStyle="bold" />

       <!--  <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/complete"
            android:textColor="#007dff"
            android:textSize="25sp" /> -->
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="20dp" >

        <EditText
            android:id="@+id/register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/loginusername"
            android:drawableStart="@drawable/loginusername"
            android:hint="@string/login_tip_username"
            android:background="@null"
            android:layout_marginBottom="10dp" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/loginpassword"
            android:drawableStart="@drawable/loginpassword"
            android:hint="@string/register_tip_password"
            android:inputType="textPassword"
            android:background="@null" 
            android:layout_marginBottom="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"  >

            <EditText
                android:id="@+id/register_validatecode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:drawableLeft="@drawable/validatecode"
                android:drawableStart="@drawable/validatecode"
                android:hint="@string/input_tip_verificationcode"
                android:background="@null" />

            <Button
                android:id="@+id/register_get_validatecode"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/loginbtnstyle"
                android:text="@string/verification_code"
                android:textColor="#ffffff"
                android:textSize="18sp" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/register_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agreement" />

        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/loginbtnstyle"
            android:text="@string/register"
            android:textColor="#ffffff"
            android:textSize="25sp" />
    </LinearLayout>

</LinearLayout>